--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password: admin
+  password:
   host: localhost
 
 development:
@@ -51,4 +51,4 @@ production:
   <<: *default
   database: names_prod
   username: root
-  password: admin
+  password:
